Add coffeescript files. Add columns

--- a/index.html
+++ b/index.html
@@ -2,11 +2,45 @@
 <html>
 <head>
   <title>Bush School Classes List</title>
-  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/0.3.4/css/semantic.min.css"></link>
+  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/0.3.4/css/semantic.min.css"></link>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
 
 <body>
-  <h1>Bush Upper School Classes</h2>
+  <h1>Bush Upper School Classes</h1>
+  <div class="ui six column grid">
+    <div class="column">
+      <h3>A</h3>
+      <ul class="A">
+      </ul>
+    </div>
+    <div class="column">
+      <h3>B</h3>
+      <ul class="B">
+      </ul>
+    </div>
+    <div class="column">
+      <h3>C</h3>
+      <ul class="C">
+      </ul>
+    </div>
+    <div class="column">
+      <h3>D</h3>
+      <ul class="D">
+      </ul>
+    </div>
+    <div class="column">
+      <h3>E</h3>
+      <ul class="E">
+      </ul>
+    </div>
+    <div class="column">
+      <h3>F</h3>
+      <ul class="F">
+      </ul>
+    </div>
+  </div>
+    
 </body>
 
 </html>
