Did a ton of work. Now all the classes appear, and you can select which subject will be highlighted

--- a/index.html
+++ b/index.html
@@ -3,41 +3,57 @@
 <head>
   <title>Bush School Classes List</title>
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/0.3.4/css/semantic.min.css"></link>
+  <link rel="stylesheet" type="text/css" href="/main.css"></link>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/0.3.4/javascript/semantic.min.js"></script>
+  <script type="text/javascript" src="classes.js"></script>
 </head>
 
 <body>
-  <h1>Bush Upper School Classes</h1>
-  <div class="ui six column grid">
-    <div class="column">
-      <h3>A</h3>
-      <ul class="A">
-      </ul>
-    </div>
-    <div class="column">
-      <h3>B</h3>
-      <ul class="B">
-      </ul>
-    </div>
-    <div class="column">
-      <h3>C</h3>
-      <ul class="C">
-      </ul>
-    </div>
-    <div class="column">
-      <h3>D</h3>
-      <ul class="D">
-      </ul>
-    </div>
-    <div class="column">
-      <h3>E</h3>
-      <ul class="E">
-      </ul>
-    </div>
-    <div class="column">
-      <h3>F</h3>
-      <ul class="F">
-      </ul>
+  <div class="container">
+    <h1 class="column-header">Bush Upper School Classes</h1>
+    
+    <select id="subject">
+      <option value="Hist">History</option>
+      <option value="Eng">English</option>
+      <option value="Sci">Science</option>
+      <option value="Math">Math</option>
+      <option value="Lang">Language</option>
+      <option value="PE">PE</option>
+      <option value="Arts">Art</option>
+    </select>
+
+    <div class="ui six column grid">
+      <div class="column">
+        <h3 class="column-header">A</h3>
+        <ul class="A">
+        </ul>
+      </div>
+      <div class="column">
+        <h3 class="column-header">B</h3>
+        <ul class="B">
+        </ul>
+      </div>
+      <div class="column">
+        <h3 class="column-header">C</h3>
+        <ul class="C">
+        </ul>
+      </div>
+      <div class="column">
+        <h3 class="column-header">D</h3>
+        <ul class="D">
+        </ul>
+      </div>
+      <div class="column">
+        <h3 class="column-header">E</h3>
+        <ul class="E">
+        </ul>
+      </div>
+      <div class="column">
+        <h3 class="column-header">F</h3>
+        <ul class="F">
+        </ul>
+      </div>
     </div>
   </div>
     
