--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Bush School Classes List</title>
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/0.3.4/css/semantic.min.css"></link>
-  <link rel="stylesheet" type="text/css" href="/main.css"></link>
+  <link rel="stylesheet" type="text/css" href="main.css"></link>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/0.3.4/javascript/semantic.min.js"></script>
   <script type="text/javascript" src="classes.js"></script>
