When a class is clicked on, it select all of the other classes that are the same

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <option value="PE">PE</option>
       <option value="Arts">Art</option>
     </select>
-
+    <button id="clear">Clear</button>
+    
     <div class="ui six column grid">
       <div class="column">
         <h3 class="column-header">A</h3>
